Project2/force-app/main/default/objects/Ingredient__c/Ingredient__c.object-meta.xml
<CustomObject>
    <label>Ingredient</label>
    <nameField>
        <label>Ingredient Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ingredients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>