Project2/force-app/main/default/objects/Ingredient__c/fields/Drinks__c.field-meta.xml
<CustomField>
    <fullName>Drinks__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Drinks</label>
    <referenceTo>Drink__c</referenceTo>
    <relationshipLabel>Ingredients</relationshipLabel>
    <relationshipName>Ingredients1</relationshipName>
    <type>Lookup</type>
</CustomField>