Project2/force-app/main/default/objects/Ingredient__c/fields/idIngredient__c.field-meta.xml
<CustomField>
    <fullName>idIngredient__c</fullName>
    <label>idIngredient</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>