Project2/force-app/main/default/objects/Ingredient__c/fields/List__c.field-meta.xml
<CustomField>
    <fullName>List__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>List</label>
    <referenceTo>Ingredients_List__c</referenceTo>
    <relationshipLabel>Ingredients</relationshipLabel>
    <relationshipName>Ingredients</relationshipName>
    <type>Lookup</type>
</CustomField>