Project2/force-app/main/default/objects/Ingredient__c/fields/strDescription__c.field-meta.xml
<CustomField>
    <fullName>strDescription__c</fullName>
    <label>strDescription</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>