Project2/force-app/main/default/objects/Ingredient__c/fields/strType__c.field-meta.xml
<CustomField>
    <fullName>strType__c</fullName>
    <label>strType</label>
    <length>40</length>
    <type>Text</type>
</CustomField>